--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,9 @@
 /MySet/nbproject/private/
 /MySet/build/
 /MySet/dist/
+/Storage/nbproject/private/
+/Storage/build/
+/Scanneer/nbproject/private/
+/Scanner/nbproject/private/
+/Scanner/build/
+/Scanner/dist/
