--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,14 @@
 /Scanner/nbproject/private/
 /Scanner/build/
 /Scanner/dist/
+/JavaFXHW/nbproject/private/
+/JavaFXHW/dist/
+/JavaFXHW/build/
+/ThreadHW/nbproject/private/
+/ThreadHW/build/
+/CircularQueue/nbproject/private/
+/CircularQueue/build/
+/CircularQueue/dist/
+/Animation/nbproject/private/
+/Animation/build/
+/Animation/dist/
